--- a/cursojs/aula05/ex02.html
+++ b/cursojs/aula05/ex02.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>exercico 01 de js</title>
+    <title>exercico 02 de js</title>
     <style>
         body{
             background-color: rgb(80, 80, 152);
@@ -35,9 +35,10 @@
    
    <script>
      
-     window.alert('minha primeira mensagen')
-     window.confirm('está gostando do curso de js')
-     window.prompt('qual é seu nome?')
+   
+    var nome = window.prompt('qual é seu nome?') 
+    window.alert('é um prazer te conhecer, '  + nome)
+    
 
    </script>
 
