--- a/cursojs/aula05/ex04.html
+++ b/cursojs/aula05/ex04.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aula 04</title>
+    <style>
+      script{
+        color: orange;
+
+      }
+    </style>  
 </head>
 <body>
    <script>
@@ -12,6 +18,11 @@
      document.write(`olá, ${nome}! seu nome maiusculo fica ssim ${nome.toUpperCase()} <br>`)
      document.write(`olá, ${nome}! seu nome menusculo é assim ${nome.toLocaleLowerCase()}`)
 
+     var idade = Number.parseInt(window.prompt('digite sua idade'))
+     var futuro = (Number.parseInt (50))
+     var calculo = idade + futuro
+     window.alert('sua idade em 2074 será  ' + calculo + '!')
+
    </script>
 </body>
-</html>
+</html>rayane
