--- a/cursojs/aula05/ex03.html
+++ b/cursojs/aula05/ex03.html
@@ -35,10 +35,10 @@
    
    <script>
 
-    var n1 = Number.parseInt(window.prompt('digite um numero:'))
-    var n2 = Number.parseInt(window.prompt('digite outro numero:'))
+    var n1 = Number.parseFloat(window.prompt('digite um numero:'))
+    var n2 = Number.parseFloat(window.prompt('digite outro numero:'))
     var s = n1+n2
-    window.alert(`a soma entre ${n1} e ${n2} e igual a ${s}`)
+    window.alert(`a soma entre ${n1} e ${n2} e igual a ` + s)
     
 
    </script>
