add mais uns scripts

--- a/cursojs/aula05/ex04.html
+++ b/cursojs/aula05/ex04.html
@@ -12,6 +12,7 @@
     </style>  
 </head>
 <body>
+  <h1>olá</h1>
    <script>
      var nome = window.prompt('digite seu nome ') 
      document.write(`seu nome tem ${nome.length} letras <br>`)
@@ -22,6 +23,7 @@
      var futuro = (Number.parseInt (50))
      var calculo = idade + futuro
      window.alert('sua idade em 2074 será  ' + calculo + '!')
+     
 
    </script>
 </body>
