--- a/cursojs/aula06/ex006.html
+++ b/cursojs/aula06/ex006.html
@@ -22,12 +22,25 @@
     </style>
 </head>
 <body>
-    <h1>eniciando estudos dom</h1>
+    <h1 name="logo">eniciando estudos dom</h1>
     <p>aqui vai um resultado</p>
     <p>aprendendo a usar <strong>dom</strong> em js</p>
-    <div>clique em mim</div>
+    <div class="msg">clique em mim</div>
     <script>
-        window.document.write(window.document.URL)
+
+        var p1 = window.document.getElementsByTagName('p')[1]
+        window.alert(p1.innerHTML)
+
+        var d = window.document.querySelector('div.msg')
+        d.style.background = 'red'
+        d.innerHTML = 'oi estou levando uma surra de js'
+
+        var h = window.document.getElementsByName('logo')[0]
+        h.style.color = 'pink'
+        h.style.background = 'black'
+
+        
+        
     </script>
 </body>
 </html>
