--- a/cursojs/aula13/index.html
+++ b/cursojs/aula13/index.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hora do dia..</title>
-    <link rel="stylesheet" href="estilos/stylo.css">
+    <title>pegando dados</title>
+    <link rel="stylesheet" href="stylo/stl.css">
 </head>
-<body onload="carregar()">
+<body>
     <header>
         <h1>Hora do dia</h1>
     </header>
     <section>
         <div id="msg">
-          sua hora atual
+          
         </div>
         <div id="foto">
-           <img id="imagens" src="imagens/bomdia.png" alt="foto do dia">
+           <img id="imagens" src="" alt="">
         </div>
     </section>
     <footer>
         <p> &copy;cursoemvideo</p>
     </footer>
     <script src="script/script.js"></script>
+    
 </body>
 </html>
