--- a/cursojs/aula13/index.html
+++ b/cursojs/aula13/index.html
@@ -3,19 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pegando dados</title>
+    <title>vrificador de idade</title>
     <link rel="stylesheet" href="stylo/stl.css">
 </head>
 <body>
     <header>
-        <h1>Hora do dia</h1>
+        <h1>verificador de idade</h1>
     </header>
     <section>
         <div id="msg">
-          
+          <p>ano de nascimento:
+            <input type="number" name="txtano" id="txtano" required>
+          </p>
+          <p>SEXO:
+            <label for="ifem">feminino:</label>
+            <input type="radio" name="igual" id="ifem">
+            <label for="imas">masculino</label>
+            <input type="radio" name="igual" id="mas"> 
+          </p>
+          <p>
+            <input type="button" value="verificar" onclick="verificar()">
+          </p>
         </div>
-        <div id="foto">
-           <img id="imagens" src="" alt="">
+        <div id="res">
+        
+            preencha os dados acima para ver o resultado!
+
         </div>
     </section>
     <footer>
