--- a/cursojs/aula13/index.html
+++ b/cursojs/aula13/index.html
@@ -12,7 +12,7 @@
     </header>
     <section>
         <div id="msg">
-          <p>ano de nascimento:
+          <p>Ano de nascimento:
             <input type="number" name="txtano" id="txtano" required>
           </p>
           <p>SEXO:
