--- a/cursojs/aula21/index.html
+++ b/cursojs/aula21/index.html
@@ -14,7 +14,7 @@
         <input type="number" name="fnum" id="fnum">
         <input type="button" value="adicionar" onclick="adicionar()"><br>
         <select name="flista" id="flista" size="8"></select><br>
-        <input type="button" value="finalisar" name="ccc" id="inum"> 
+        <input type="button" value="finalisar" name="ccc" id="inum" onclick="finalisar()"> 
 
     </div>
     <div id="res">
