--- a/cursojs/aula22/index.html
+++ b/cursojs/aula22/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>treinando</title>
 </head>
 <body>
-    
+    <header><h1>funçoes</h1></header>
+    <main>Digite  numeros:
+        <p>
+            <input type="number" name="num" id="inum">
+            <input type="number" name="num" id="nume">
+        </p>
+        <input type="button" value="resultado" id=" dois" onclick="clicar()"> 
+        <div id="res"></div>
+    </main>
+    <script src="parouinpar/doc.js"></script>
 </body>
 </html>
